--- a/styles/style.css
+++ b/styles/style.css
@@ -74,7 +74,7 @@
 	flex-direction: column;
 	font-size:  100px;
 	font-weight: bold;
-	padding: 165px 50px 147px;
+	padding: 165px 50px 130px;
 }
 
 .cover__title,
@@ -93,15 +93,17 @@
 
 .letter-spacing-right {
 	display: inline-block;
-	margin-right: 35px;
+	margin-right: 32px;
 }
 
 .letter-spacing-extended {
-	letter-spacing: 25px;
+	letter-spacing: 30px;
 }
 
 .aligned-text_center {
 	align-self: center;
+	margin:10px 55px 0 0 ;
+
 }
 
 .aligned-text_right {
@@ -118,12 +120,12 @@
 	display: flex;
 	align-items: center;
 	justify-content: flex-end;
-	padding-bottom: 62px;
+	padding-bottom: 50px;
 }
 
 .cover__description-text {
-	word-spacing: 20px;
-	padding: 5px;
+	word-spacing: 18px;
+	padding: 5px 0 5px 5px;
 }
 
 .bet-button {
@@ -138,7 +140,7 @@
 .lots {
 	max-width: 1052px;
 	margin: 0 auto;
-	margin-top: 156px;
+	margin-top: 179px;
 }
 
 .lots__heading {
@@ -167,7 +169,7 @@
 .card {
 	height: 563px;
 	width: 334px;
-	padding: 40px;
+	padding: 55px 40px 47px 40px;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-between;
@@ -200,7 +202,7 @@
 
 .lots__look-more-link {
 	display: block;
-	margin: 30px 0 146px 40px;
+	margin: 34px 0 146px 40px;
 	font-size: 20px;
 }
 
@@ -285,7 +287,7 @@
 	flex-direction: column;
 	align-items: center;
 	line-height: 21px;
-	margin-top: 2px;
+	margin-top: 1px;
 	margin-left: 40px;
 }
 
